# TorchJaekwon

./: .gitignore  README.md  TestCode.py  init_project.py  pyproject.toml  setup.py
TorchJaekwon/: Controller.py  GetModule.py  Git.py  InitProject.py  JupyterNotebookUtil.py  Path.py  __init__.py
TorchJaekwon/Evaluater/: Evaluater.py  MetricSound.py  MetricVoice.py
TorchJaekwon/Util/: Util.py  UtilAudio.py  UtilAudioMelSpec.py  UtilAudioSTFT.py  UtilData.py  UtilTorch.py  UtilVideo.py  __init__.py
TorchJaekwon/cp/: .gitignore  HParams.py  Main.py
cp/: .gitignore  0_git_init.sh  0_install_package.sh  0_requirements.txt  1_git_add_all_ext.sh  HParams.py  Main.py  h_params.py  main.py
cp/.script/: python.sh  rsync.sh  set_path.sh  show_running_cmd.sh
cp/Config/: 000000_template.yaml
cp/Model/: ModelTemplate.py
cp/Script/: 0_git_init.sh  1_install_torchjk.sh  2_git_add_all_ext.sh  3_git_add_all_file.sh  train.sh
cp/config/: 000000_template.yaml
cp/evaluater/: evaluter_template.py
cp/model/: ModelTemplate.py
cp/script/: 0_git_init.sh  1_install_torchjk.sh  train.sh
cp/vscode/: launch.json
rule/: agent.md  general.md  torch-jaekwon.md  train.md
torch_jaekwon/: __init__.py  controller.py  get_module.py  h_params.py  instantiate.py  path.py
torch_jaekwon/evaluater/: Evaluater.py  MetricVoice.py  evaluater.py
torch_jaekwon/inference/: inferencer.py
torch_jaekwon/util/: Util.py  UtilAudio.py  UtilAudioMelSpec.py  UtilAudioSTFT.py  __init__.py  util.py  util_audio.py  util_audio_mel.py  util_audio_stft.py  (+5 more)
vscode/: launch.json  settings.json
(+147 files in other folders)
