[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TorchJaekwon"
version = "1.0"
description = ""
# If you have a license, you can specify it here:
license = { text = "" }
authors = [
  { name = "Jaekwon Im", email = "jakeoneijk@kaist.ac.kr" }
]
dependencies = [
  "numpy",
  "tqdm",
  "psutil",
  "pyyaml",
  "matplotlib",
  "librosa",
  "wandb",
  "tensorboardX",
  "ema-pytorch==0.2.3",
  "torchdiffeq",
  "torchsde",
  "safetensors"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["TorchJaekwon*"]
